services/ktayl-policy-service/minicloud-1/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ktayl-policy-service
  namespace: ktayl-staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ktayl-policy-staging.10.0.0.200.nip.io
      secretName: ktayl-policy-service-tls
  rules:
    - host: ktayl-policy-staging.10.0.0.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ktayl-policy-service
                port:
                  name: http
